--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "start-api": "cd api && flask run --no-debugger",
-    "start-api": "cd api && flask order_poll --no-debugger",
+    "order-poll": "cd api && flask order-poll",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
