--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "ra-data-simple-rest": "^3.10.4",
     "react": "^17.0.1",
     "react-admin": "^3.13.3",
+    "react-barcode-reader": "^0.0.2",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
@@ -45,6 +47,16 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "react-router-dom": "^5.2.0"
-  }
+  },
+  "babel": {
+        "presets": [
+          "@babel/preset-env",
+          "@babel/preset-react"
+        ],
+        "plugins": [
+            "@babel/plugin-proposal-class-properties"
+        ]
+    }
 }
