--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
+    "react-router-dom": "^5.2.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -47,8 +48,7 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "react-router-dom": "^5.2.0"
+    "@babel/plugin-proposal-class-properties": "^7.13.0"
   },
   "babel": {
         "presets": [
