--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "prop-types": "^15.7.2",
     "ra-data-simple-rest": "^3.10.4",
     "react": "^17.0.1",
-    "react-admin": "^3.13.3",
+    "react-admin": "^3.13.5",
     "react-barcode-reader": "^0.0.2",
     "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
+    "react-redux": "7.2.2",
     "react-scripts": "4.0.3",
     "react-router-dom": "^5.2.0",
     "web-vitals": "^1.0.1"
