--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "react-router-dom": "^5.2.0",
     "web-vitals": "^1.0.1"
   },
+  "resolutions": {
+    "react-redux": "7.2.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "start-api": "cd api && flask run --no-debugger",
