--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "babel-loader": "8.1.0",
     "prop-types": "^15.7.2",
     "ra-data-simple-rest": "^3.10.4",
-    "react": "^17.0.1",
+    "react": "17.0.1",
     "react-admin": "^3.13.5",
     "react-barcode-reader": "^0.0.2",
     "react-dom": "^17.0.1",
     "react-redux": "7.2.2",
-    "react-scripts": "4.0.3",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
   "resolutions": {
@@ -54,12 +55,12 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0"
   },
   "babel": {
-        "presets": [
-          "@babel/preset-env",
-          "@babel/preset-react"
-        ],
-        "plugins": [
-            "@babel/plugin-proposal-class-properties"
-        ]
-    }
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
+    ]
+  }
 }
